# high-frequency-anomaly-detection-middleware

./: .gitignore  Gemfile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
.kamal/: secrets
app/channels/application_cable/: channel.rb  connection.rb
app/controllers/: dashboards_controller.rb
app/controllers/api/v1/: anomalies_controller.rb
app/models/: anomaly.rb
app/views/anomalies/: _anomaly.html.erb
app/views/dashboards/: show.html.erb
app/views/layouts/: application.html.erb
config/: application.rb  boot.rb  cable.yml  database.yml  deploy.yml  routes.rb
config/environments/: development.rb  production.rb
config/initializers/: redis.rb
db/: schema.rb
db/migrate/: 20260219120000_create_anomalies.rb
external_workers/analyzer/: .gitignore  CMakeLists.txt  main.cpp  packet_parser.cpp  packet_parser.h  thread_pool.h
external_workers/analyzer/tests/: CMakeLists.txt  test_parser.cpp
lib/middleware/: ingester.rb
test/: test_helper.rb
test/controllers/api/v1/: anomalies_controller_test.rb
test/lib/middleware/: ingester_test.rb
test/models/: anomaly_test.rb
